# bjab-net

./: .air.toml  .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  go.mod  go.sum  main.go
.github/workflows/: build-and-test.yml  fly-deploy.yml
internal/blog/: format.go  post.go  post_test.go  render.go
internal/meta/: meta.go  meta_test.go
internal/projects/: project.go  project_test.go  wasm.go  wasm_test.go
internal/server/: content_test.go  handlers.go  handlers_test.go  routes.go  server.go
posts/: test_post copy 2.md  test_post copy 3.md  test_post.md  test_post_2 copy 3.md  test_post_2 copy.md  test_post_2.md
src/: main.rs
src/blog/: format.rs  mod.rs  posts.rs  read.rs  read_file.rs  read_markdown.rs  render.rs
src/projects/: wasm.rs
src/server/: blog.rs  index.rs  mod.rs  routes.rs
templates/: base.html  blog.html  index.html  post.html
web/: index.html  structure.html
web/posts/: test_post copy.md  test_post.md  test_post_2 copy 2.md  test_post_2 copy 3.md  test_post_2 copy.md  test_post_2.md  this-site.md
web/projects/WebGL Build/: metadata.md
web/projects/Wingleader/: metadata.md
web/projects/fireplace/: index.html  metadata.md  web_build4.pck
web/projects/muckbucket/: WebGL Build.data  WebGL Build.data.br  WebGL Build.framework.js  WebGL Build.framework.js.br  WebGL Build.wasm  WebGL Build.wasm.br  index.html  metadata.md
web/static/: style.css  tailwind.css
web/templates/: base.html  blog.html  feed.xml  index.html  post.html  project.html  projects.html
