[package]
name = "bjab-net"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.15.6"
axum = "0.8.8"
comrak = "0.51.0"
tokio = { version = "1.51.0", features = ["rt-multi-thread"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["fs"] }

[dev-dependencies]
cargo-watch = "8.5.3"
